fixed background on mobile of login

--- a/src/Login.css
+++ b/src/Login.css
@@ -1,20 +1,50 @@
 /* https://dev.to/devlorenzo/css-how-to-make-a-border-animation-1kn
  good animations to play with explained by this guy^ */
 
-.login {
+.wrapper {
+	position: fixed;
 	display: grid;
 	place-items: center;
 	height: 100vh;
-	background: linear-gradient(45deg, darkgreen, black);
-	background-size: cover;
+	width: 100vw;
+	z-index: -1;
+	background-repeat: no-repeat;
+	background-position: center;
+	background: linear-gradient(to left top, darkgreen, black);
+	background-color: darkgreen;
+
+	/* Safari 4, Chrome 1-9, iOS 3.2-4.3, Android 2.1-3.0 */
+	background-image: -webkit-gradient(
+		linear,
+		left top,
+		right top,
+		from(darkgreen),
+		to(black)
+	);
+
+	/* Safari 5.1, iOS 5.0-6.1, Chrome 10-25, Android 4.0-4.3 */
+	background-image: -webkit-linear-gradient(left, darkgreen, black);
+
+	/* Firefox 3.6 - 15 */
+	background-image: -moz-linear-gradient(left, darkgreen, black);
+
+	/* Opera 11.1 - 12 */
+	background-image: -o-linear-gradient(left, darkgreen, black);
+
+	/* Opera 15+, Chrome 25+, IE 10+, Firefox 16+, Safari 6.1+, iOS 7+, Android 4.4+ */
+	background-image: linear-gradient(to right, darkgreen, black);
 }
 
-.login > img {
-	width: auto;
-	height: 200px;
+.login {
+	position: absolute;
+	height: 100vh;
 }
 
-.login > a {
+.login img {
+	width: 80%;
+}
+
+.login a {
 	padding: 20px;
 	border-radius: 99px;
 	font-weight: 600;
